Fix up pypi provides and requires

--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/7c/e5/690583c1bbb2c9958287e64a5901
 archives = 
 giturl = https://github.com/colcon/colcon-test-result.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
